--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -3,7 +3,7 @@
         <h1>Find your match</h1>
         <p class="lead">Come on into view your matches... all you need to do is sign up!</p>
         <div class="text-center">
-            <button (click)="toggleRegisterMode()" class="btn btn-primary btn-lg mr-2">Register</button>
+            <button (click)="toggleRegisterMode()" class="btn btn-primary btn-lg me-2">Register</button>
             <button class="btn btn-info btn-lg">Learn more</button>
         </div>
     </div>
@@ -12,7 +12,7 @@
 <div *ngIf="registerMode" class="container">
     <div class="row justify-content-center">
         <div class="col-4">
-            <p>Register Form Goes Here!</p>
+            <app-register (cancelRegister)="cancelRegisterMode($event)"></app-register>
         </div>
     </div>
 </div>
