--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -36,7 +36,7 @@
           aria-expanded="false"
           dropdownToggle
         >
-          Welcom User
+          Welcome User
         </button>
         <ul class="dropdown-menu mt-3" *dropdownMenu>
           <li><a class="dropdown-item">Edit</a></li>
