--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -5,3 +5,11 @@
 
 /* Importing Datepicker SCSS file. */
 @import "node_modules/ngx-bootstrap/datepicker/bs-datepicker";
+
+@import "~bootswatch/dist/litera/variables";
+@import "~bootstrap/scss/bootstrap";
+@import "~bootswatch/dist/litera/bootswatch";
+
+@import "node_modules/font-awesome/scss/font-awesome.scss";
+// @import "node_modules/ngx-toastr/toastr.css";
+@import "~ngx-toastr/toastr";
