--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -25,6 +25,9 @@
             <a class="nav-link" routerLink="/messages" routerLinkActive="active">Messages</a>
           </li>
         </ng-container>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/test-error" routerLinkActive="active">Errors</a>
+        </li>
       </ul>
 
       <div class="btn-group" dropdown>
